[tool.poetry]
name = "sysmon"
version = "0.2.0"
description = "Remotely accessible service for monitoring system performance and managing running processes"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "AGPL-3.0-or-later AND MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = ">=8.0.0,<9"
flask = ">=3.0.0"
psutil = "^6.1.1"
py-cpuinfo = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3 || ^8.0.0"
pytest-cov = "^4.1.0 || ^5.0.0 || ^6.0.0"
ruff = "^0.2.0 || ^0.3.0 || ^0.6.0 || ^0.7.0 || ^0.8.0"
tox = "^4.0.0"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"sysmon/*" = ["S105"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sysmon = "sysmon.main:main"
